--- a/frontend/packages/website/docs/Guides/Setting up CLI.mdx
+++ b/frontend/packages/website/docs/Guides/Setting up CLI.mdx
@@ -98,7 +98,7 @@ active_profile = "LOCAL_CLIENT"
 [[profiles]]
 name = "LOCAL_CLIENT"
 r4_url = "https://api.haste.health/w/[tenant]/[project]/api/v1/fhir/r4"
-oidc_discovery_uri = "https://api.haste.health/w/[tenant]/[project]/api/v1/oidc/.well-known/openid-configuration"
+oidc_discovery_uri = "https://api.haste.health/.well-known/openid-configuration/w/[tenant]/[project]"
 
 [profiles.auth.ClientCredentails]
 client_id = "cli"
