--- a/frontend/packages/website/docs/Integration/Identity providers/Auth0.mdx
+++ b/frontend/packages/website/docs/Integration/Identity providers/Auth0.mdx
@@ -13,6 +13,8 @@ tags:
 #
 <img src="/img/auth0.svg" alt="Auth0 Logo" style={{ width: '200px' }} />
 
+# Auth0 Integration
+
 This guide provides step-by-step instructions on integrating Auth0 as an identity provider for your application.
 
 ## Prerequisites
