--- a/frontend/packages/website/docs/Integration/AI Applications/Mistral.mdx
+++ b/frontend/packages/website/docs/Integration/AI Applications/Mistral.mdx
@@ -8,6 +8,6 @@ tags:
 ---
 
 #
-<img src="/img/mistral_logo.svg" alt="Mistral Logo" style={{ width: '200px' }} />
+<img class="mb-4" src="/img/mistral_logo.svg" alt="Mistral Logo" style={{ width: '200px' }} />
 
 This guide provides step-by-step instructions on integrating Mistral as an AI application for your Haste Health platform.
