--- a/frontend/packages/website/docs/Integration/Identity providers/Azure.mdx
+++ b/frontend/packages/website/docs/Integration/Identity providers/Azure.mdx
@@ -11,10 +11,9 @@ tags:
 ---
 
 #
-<img src="/img/azure.svg" alt="Azure Logo" style={{ width: '100px' }} />
+<img class="mb-4" src="/img/azure.svg" alt="Azure Logo" style={{ width: '100px' }} />
 
 # Azure Integration
-
 
 This guide provides step-by-step instructions on integrating Microsoft Azure Active Directory (Azure AD) as an identity provider for your Project.
 
