--- a/frontend/packages/website/docs/Integration/AI Applications/DeepSeek.mdx
+++ b/frontend/packages/website/docs/Integration/AI Applications/DeepSeek.mdx
@@ -8,6 +8,6 @@ tags:
 ---
 
 #
-<img src="/img/deepseek_logo.svg" alt="DeepSeek Logo" style={{ width: '200px' }} />
+<img class="mb-4" src="/img/deepseek_logo.svg" alt="DeepSeek Logo" style={{ width: '200px' }} />
 
 This guide provides step-by-step instructions on integrating DeepSeek as an AI application for your Haste Health platform.
