--- a/frontend/packages/website/docs/Integration/AI Applications/Github Copilot.mdx
+++ b/frontend/packages/website/docs/Integration/AI Applications/Github Copilot.mdx
@@ -8,6 +8,6 @@ tags:
 ---
 
 #
-<img src="/img/copilot_logo.svg" alt="GitHub Copilot Logo" style={{ width: '200px' }} />
+<img class="mb-4" src="/img/copilot_logo.svg" alt="GitHub Copilot Logo" style={{ width: '200px' }} />
 
 This guide provides step-by-step instructions on integrating GitHub Copilot as an AI application for your Haste Health platform.
