--- a/frontend/packages/website/docs/Integration/AI Applications/OpenAI.mdx
+++ b/frontend/packages/website/docs/Integration/AI Applications/OpenAI.mdx
@@ -8,6 +8,6 @@ tags:
 ---
 
 #
-<img src="/img/openai_logo.svg" alt="OpenAI Logo" style={{ width: '200px' }} />
+<img class="mb-4" src="/img/openai_logo.svg" alt="OpenAI Logo" style={{ width: '200px' }} />
 
 This guide provides step-by-step instructions on integrating OpenAI as an AI application for your Haste Health platform.
