--- a/frontend/packages/website/docs/Integration/Identity providers/Auth0.mdx
+++ b/frontend/packages/website/docs/Integration/Identity providers/Auth0.mdx
@@ -11,7 +11,7 @@ tags:
 ---
 
 #
-<img src="/img/auth0.svg" alt="Auth0 Logo" style={{ width: '200px' }} />
+<img class="mb-4" src="/img/auth0.svg" alt="Auth0 Logo" style={{ width: '200px' }} />
 
 # Auth0 Integration
 
