--- a/frontend/packages/website/docs/Integration/AI Applications/Gemini.mdx
+++ b/frontend/packages/website/docs/Integration/AI Applications/Gemini.mdx
@@ -41,8 +41,8 @@ Before you begin, ensure you have:
 
 First, create an OAuth client that Gemini will use to authenticate with Haste Health.
 
-### Using the Admin App
-
+<Tabs>
+<TabItem value="admin-app" label="Admin App" default>
 1. Navigate to **Security/ClientApplications** in your Haste Health Admin App
 2. Click **New**
 3. Configure the following settings:
@@ -53,7 +53,6 @@ First, create an OAuth client that Gemini will use to authenticate with Haste He
 | **Grant Types** | `authorization_code` and `refresh_token` | Machine-to-machine authentication |
 | **Response Types** | `token` | OAuth response type |
 | **Scope** | `openid profile email offline_access user/*.*` | Access level (read-only or full access) |
-| **Secret** | (auto-generated) | Client secret for authentication |
 | **Redirect URIs** | `http://localhost:7777/oauth/callback` | Redirect URI for OAuth flow |
 
 Create the ClientApplication using the Haste Health CLI:
@@ -62,10 +61,7 @@ Note that the redirect uri should be `http://localhost:7777/oauth/callback` per 
 
 4. Click **Actions/Create**
 5. **⚠️ Important**: Copy and save the generated id for later use.
-
-### Using the FHIR API
-
-<Tabs>
+</TabItem>
 <TabItem value="cli" label="CLI" default>
 
 ```bash
@@ -130,14 +126,14 @@ For more information, see [Scopes documentation](/docs/Authentication/Scopes).
 
 1. Run `npm install -g @google/gemini-cli` to install the Gemini CLI.
 
-## Step 3: Configure MCP Server for OAuth
+## Step 3: Configure Gemini
 
 Navigate to Home/.gemini/settings.json and add a new MCP server configuration. Client ID should be from result in Step 1.
 
 ```json
 "mcpServers": {
     "haste-health": {
-      "httpUrl": "https://local.haste.health/w/ohio-health/5nst9f43/api/v1/mcp",
+      "httpUrl": "https://api.haste.health/w/ohio-health/5nst9f43/api/v1/mcp",
       "authProviderType": "dynamic_discovery",
       "targetAudience": "lir9o7yvzv80yr0dm20pbxz26-",
       "oauth": {
@@ -236,5 +232,4 @@ For issues or questions:
 2. Review Gemini logs for error details
 3. Verify your ClientApplication configuration
 4. Test OAuth authentication manually
-5. Contact Haste Health support with log files and configuration (redact secrets!)
-6. File an issue on the [Haste Health GitHub repository](https://github.com/haste-health/haste_health/issues)
+5. File an issue on the [Haste Health GitHub repository](https://github.com/HasteHealth/HasteHealth/issues)
