--- a/frontend/packages/website/docs/Integration/Identity providers/GCP.mdx
+++ b/frontend/packages/website/docs/Integration/Identity providers/GCP.mdx
@@ -56,7 +56,7 @@ This guide provides step-by-step instructions on integrating Google Cloud Platfo
    - At the bottom in "Authorized redirect URIs" section, add a new redirect URI for your Haste Health tenant:
      `https:://[haste-health-host]/w/[my-tenant]/system/api/v1/oidc/federated/[idp-resource-id]/callback`
 
-5. Test the Integration
+5. **Test the Integration**
    - Click Projects in system admin app and modify at the bottom identity providers.
    - Add the GCP identity provider to the desired project.
    - Click the project and log out.
