--- a/frontend/packages/website/docs/Integration/Identity providers/Okta.mdx
+++ b/frontend/packages/website/docs/Integration/Identity providers/Okta.mdx
@@ -64,7 +64,7 @@ This guide provides step-by-step instructions on integrating Okta as an identity
    - In the "Redirect URIs" section, add a new redirect URI for your Haste Health tenant:
      `https:://[haste-health-host]/w/[my-tenant]/system/api/v1/oidc/federated/[idp-resource-id]/callback`
 
-5. Test the Integration
+5. **Test the Integration**
    - Click Projects in system admin app and modify at the bottom identity providers.
    - Add the Okta identity provider to the desired project.
    - Attempt to log in to your Haste Health application using the Okta identity provider to ensure everything is set up correctly.
