--- a/frontend/packages/website/docs/Integration/AI/Gemini.mdx
+++ b/frontend/packages/website/docs/Integration/AI/Gemini.mdx
@@ -120,7 +120,7 @@ Choose appropriate scopes based on what Gemini needs to access:
 "scope": "user/*.*"
 ```
 
-For more information, see [Scopes documentation](/docs/APIs%20&%20SDKs/Authorization/scopes).
+For more information, see [Scopes documentation](/docs/api/authorization/scopes).
 
 ## Step 2: Install Gemini CLI.
 
@@ -217,11 +217,11 @@ To enable detailed logging for troubleshooting enable debugging in Gemini via `-
 ## Related Resources
 
 - [Model Context Protocol Specification](https://modelcontextprotocol.io/specification/2025-11-25/basic/lifecycle)
-- [Client Registration](/docs/APIs%20&%20SDKs/Authentication/Client%20Registration) - Complete ClientApplication documentation
-- [OAuth 2.0 Authorization codes](/docs/APIs%20&%20SDKs/Authentication/OpenID%20Connect/authorization-code) - Authentication code grant details
-- [OAuth 2.0 Refresh tokens](/docs/APIs%20&%20SDKs/Authentication/OpenID%20Connect/refresh-token) - Refresh token grant details
-- [Scopes](/docs/APIs%20&%20SDKs/Authorization/scopes) - OAuth scope configuration
-- [Model Context Protocol](/docs/APIs%20&%20SDKs/Rest%20API/Model%20Context%20Protocol/Endpoint) - MCP overview and setup
+- [Client Registration](/docs/api/authentication/client_registration) - Complete ClientApplication documentation
+- [OAuth 2.0 Authorization codes](/docs/api/authentication/openid_connect/authorization_code) - Authentication code grant details
+- [OAuth 2.0 Refresh tokens](/docs/api/authentication/openid_connect/refresh_token) - Refresh token grant details
+- [Scopes](/docs/api/authorization/scopes) - OAuth scope configuration
+- [Model Context Protocol](/docs/api/rest_api/model_context_protocol/endpoint) - MCP overview and setup
 - [FHIR API Documentation](/docs/category/fhir) - Available FHIR operations
 
 ## Support
