--- a/frontend/packages/website/docs/Reference/react.mdx
+++ b/frontend/packages/website/docs/Reference/react.mdx
@@ -221,8 +221,8 @@ This creates the distribution files in the `dist/` directory.
 
 ### Related Documentation
 - **[FHIR API](/docs/category/fhir)** - Working with FHIR resources
-- **[Authentication](/docs/APIs%20&%20SDKs/Authentication/Intro)** - Authentication setup
-- **[Getting Started](/docs/Getting%20Started/Intro)** - Quick start guide
+- **[Authentication](/docs/api/authentication/intro)** - Authentication setup
+- **[Getting Started](/docs/getting_started/intro)** - Quick start guide
 
 ### External Resources
 - **[React Documentation](https://react.dev)** - React framework
