--- a/frontend/packages/website/docs/getting_started/Intro.mdx
+++ b/frontend/packages/website/docs/getting_started/Intro.mdx
@@ -1,4 +1,5 @@
 ---
+title: Intro
 sidebar_position: 0
 ---
 
@@ -29,6 +30,6 @@ Write out a detailed site guide and link to other documentation pages as needed.
 
 ## Next Steps
 To learn more about Haste Health, check out the following sections:
-- [FHIR Intro](../APIs%20&%20SDKs/Rest%20API/FHIR/Intro)
-- [Authentication](../APIs%20&%20SDKs/Authentication/Intro)
+- [FHIR Intro](../api/rest_api/fhir/intro)
+- [Authentication](../api/authentication/intro)
 We hope you enjoy using Haste Health!
