--- a/frontend/packages/website/docs/tutorials/cli.mdx
+++ b/frontend/packages/website/docs/tutorials/cli.mdx
@@ -163,7 +163,7 @@ If you encounter authentication errors:
 
 ### Documentation
 - **[FHIR API Documentation](/docs/category/fhir)** - FHIR API reference
-- **[Authentication](/docs/APIs%20&%20SDKs/Authentication/Intro)** - Auth setup guide
+- **[Authentication](/docs/api/authentication/intro)** - Auth setup guide
 - **[GitHub Repository](https://github.com/HasteHealth/HasteHealth)** - Source code
 
 ### External Resources
