--- a/frontend/packages/website/docs/getting_started/quick_start.mdx
+++ b/frontend/packages/website/docs/getting_started/quick_start.mdx
@@ -1,16 +1,10 @@
 ---
-title: Intro
+title: Quick Start (5 min)
 sidebar_position: 0
 ---
 
-# Intro
-
+# Quick Start (5 min)
 Welcome to the Haste Health documentation! This guide will help you get started with setting up and using Haste Health.
-
-## What is Haste Health?
-Haste Health is a fast open-source healthcare developer platform designed to facilitate healthcare data interoperability using the FHIR (
-Fast Healthcare Interoperability Resources) standard. It provides tools and services to manage, store, and exchange healthcare information efficiently.
-
 
 ## Prerequisites
 Before you begin, ensure you have the following installed on your machine:
