--- a/frontend/packages/website/docs/overview/what_is_haste_health.mdx
+++ b/frontend/packages/website/docs/overview/what_is_haste_health.mdx
@@ -5,3 +5,31 @@ tags:
   - overview
   - introduction
 ---
+
+# What is Haste Health?
+
+Haste Health is a high-performance FHIR development platform built for speed. It provides healthcare data infrastructure with secure multi-tenant architecture, powerful search capabilities, and standards-compliant FHIR APIs.
+
+## Key Features
+
+- **Fast & Scalable**: Built in Rust for high-performance resource operations and sub-second search queries
+- **FHIR Compliant**: Support for FHIR R4 pecifications with all standard resource types
+- **Multi-Tenant**: Complete data isolation with hierarchical tenant and project architecture
+- **Powerful Search**: Elasticsearch-powered search supporting FHIR search parameter types
+- **OAuth 2.0 / SMART on FHIR**: Industry-standard authentication and authorization
+- **Version History**: Complete audit trail with automatic resource versioning
+- **Developer Friendly**: RESTful APIs, comprehensive documentation, and TypeScript/Rust SDKs
+
+## Use Cases
+
+- **EHR Integration**: Connect healthcare applications to clinical data
+- **Patient Portals**: Build consumer-facing health applications
+- **Research Platforms**: Aggregate and analyze healthcare data
+- **Care Coordination**: Share information across healthcare providers
+- **AI Applications**: Power healthcare AI with structured FHIR data
+
+## Getting Started
+
+Ready to build with Haste Health? Start by creating your first account and loading sample data.
+
+**[Quick Start Guide →](/docs/getting_started/quick_start)**
