--- a/frontend/packages/website/docs/getting_started/next_steps.mdx
+++ b/frontend/packages/website/docs/getting_started/next_steps.mdx
@@ -2,3 +2,56 @@
 title: Next steps
 sidebar_position: 3
 ---
+
+# Next Steps
+
+Now that you've completed the quick start, here are recommended resources to deepen your understanding and build production-ready applications with Haste Health.
+
+## Core Concepts
+
+Understand the fundamental architecture and design principles:
+
+- **[Platform Architecture](/docs/core_concepts/platform_architecture)** - Understand tenants, projects, and data isolation
+
+## Working with FHIR Resources
+
+Master the FHIR API and resource operations:
+
+{/*  **[Search](/docs/api/rest_api/search)** - Query resources with FHIR search parameters > */}
+
+- **[REST API Overview](/docs/api/rest_api/fhir/intro)** - CRUD operations, transactions, and batch requests
+- **[Terminology Services](/docs/api/rest_api/terminology/intro)** - Code validation and ValueSet expansion
+
+## Authentication & Security
+
+Secure your applications with OAuth 2.0 and SMART on FHIR:
+
+- **[Authentication Overview](/docs/api/authentication/intro)** - OAuth flows and token management
+- **[Client Registration](/docs/api/authentication/client_registration)** - Register OAuth clients
+- **[Scopes](/docs/api/authorization/scopes)** - Configure resource-level permissions
+- **[SMART on FHIR](/docs/api/authentication/smart_on_fhir)** - Healthcare-specific authorization
+
+## Integration Guides
+
+Connect with external systems and build applications:
+
+- **[EHR Integration](/docs/integration/ehr/epic)** - Connect to Epic, Cerner, and other EHR systems
+- **[AI Applications](/docs/integration/ai/claude)** - Integrate Claude, Gemini, and other AI tools
+- **[Web Application Tutorial](/docs/tutorials/web_application)** - Build a complete web app
+- **[CLI Tutorial](/docs/tutorials/cli)** - Use the command-line interface
+
+## SDKs & Developer Tools
+
+Accelerate development with client libraries:
+
+- **[TypeScript SDK](/docs/api/sdks/typescript)** - Type-safe FHIR client for JavaScript/TypeScript
+- **[Rust SDK](/docs/api/sdks/rust)** - Native Rust client library
+
+## Reference Documentation
+
+- **[FHIR Resource Types](/docs/category/resources)** - Complete resource documentation
+- **[React](/docs/reference/react)** - Full API reference
+
+## Get Help
+
+- **[GitHub Issues](https://github.com/HasteHealth/HasteHealth/issues)** - Report bugs or request features
