--- a/frontend/packages/website/docs/getting_started/next_steps.mdx
+++ b/frontend/packages/website/docs/getting_started/next_steps.mdx
@@ -50,7 +50,7 @@ Accelerate development with client libraries:
 ## Reference Documentation
 
 - **[FHIR Resource Types](/docs/category/resources)** - Complete resource documentation
-- **[React](/docs/reference/react)** - Full API reference
+- **[React](/docs/reference/react)** - React components for FHIR resources
 
 ## Get Help
 
