--- a/frontend/packages/website/docs/getting_started/quick_start.mdx
+++ b/frontend/packages/website/docs/getting_started/quick_start.mdx
@@ -13,7 +13,8 @@ Before you begin, ensure you have the following installed on your machine:
 ## Running Haste Health with Docker
 This will setup all the infrastructure required to run Haste Health and start the main server and worker.
 
-The server will be available at http://api.haste.health
+* The server will be available at http://localhost:3000
+* The admin interface will be available at http://localhost:3001
 
 ```bash
 curl https://raw.githubusercontent.com/HasteHealth/HasteHealth/refs/heads/main/docker-compose.yml -o docker-compose.yml
@@ -26,4 +27,5 @@ Write out a detailed site guide and link to other documentation pages as needed.
 To learn more about Haste Health, check out the following sections:
 - [FHIR Intro](../api/rest_api/fhir/intro)
 - [Authentication](../api/authentication/intro)
+
 We hope you enjoy using Haste Health!
